# OS_Colloq_1

./: OS_Colloq_1.sln  README.md
OS_Colloq_1/: CMakeLists.txt  OS_Colloq_1.vcxproj  OS_Colloq_1.vcxproj.filters  functions.h  main.cpp
